projects/icd-lookup/force-app/main/default/objects/ICD_Lookup__mdt/ICD_Lookup__mdt.object-meta.xml
<CustomObject>
    <description
  >Drives per-flow configuration for each icdLookup LWC instance, controlling field label, placeholder text, no-results message, help text, and mandatory validation. Identify records by Flow API Name matching the Screen Flow API name. ref: ISP-6429</description>
    <label>ICD Lookup</label>
    <pluralLabel>ICD Lookups</pluralLabel>
</CustomObject>