projects/icd-lookup/force-app/main/default/objects/ICD_Lookup__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Checkbox (Yes/No). When checked, this configuration record is active and will be applied to the matching Flow at runtime. When unchecked, the record is ignored and the component falls back to the defaults set in Flow Properties. Defaults to true. Uncheck to disable a configuration without deleting the record. ref: ISP-6429</description>
    <defaultValue>true</defaultValue>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>