projects/icd-lookup/force-app/main/default/objects/ICD_Lookup__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Internal documentation field enabling administrators to trace exactly which form, screen slot, or business requirement this specific record is intended to support. ref: ISP-6429</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>