projects/icd-lookup/force-app/main/default/objects/ICD_Lookup__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Label text displayed above the ICD-10 search input for this field instance. When set, overrides the Label input property on the LWC. Leave blank to use the value configured in Flow Properties or the component default ('ICD-10 Diagnosis'). ref: ISP-6429</description>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>