projects/icd-lookup/force-app/main/default/objects/ICD_Lookup__mdt/fields/Field_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Field_Placeholder__c</fullName>
    <description>The faint placeholder text rendered inside the input box before user entry (e.g., "Search by code or description..."). ref: ISP-6429</description>
    <label>Field Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>