projects/icd-lookup/force-app/main/default/objects/ICD_Lookup__mdt/fields/Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Name__c</fullName>
    <description>API name of the Screen Flow using this configuration record. Created as a custom field to bypass the standard 40-character limit of the system DeveloperName field. ref: ISP-6429</description>
    <label>Flow API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>