projects/icd-lookup/force-app/main/default/objects/ICD_Lookup__mdt/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>Help text displayed next to the field label via lightning-helptext, providing additional context to the Flow user. Leave blank for no help text. When Flow API Name is set, this value overrides the Help Text input property on the LWC. ref: ISP-6429</description>
    <label>Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>