projects/icd-lookup/force-app/main/default/objects/ICD_Lookup__mdt/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <description>When true, the ICD-10 code field is required before the Flow screen can advance. ref: ISP-6038</description>
    <defaultValue>false</defaultValue>
    <label>Required?</label>
    <type>Checkbox</type>
</CustomField>