projects/icd-lookup/force-app/main/default/objects/ICD_Lookup__mdt/fields/No_Matching_Codes_Found_Message__c.field-meta.xml
<CustomField>
    <fullName>No_Matching_Codes_Found_Message__c</fullName>
    <description
  >User-facing message displayed when the external API returns zero valid diagnostic matches for the user&apos;s query string. ref: ISP-6429</description>
    <label>No Matching Codes Found Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>