projects/icd-lookup/force-app/main/default/objects/ICD_Lookup__mdt/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <description>Checkbox (Yes/No). When checked, the user must select an ICD-10 code before the Flow screen can advance - leaving the field empty will block navigation. This value overrides the Required setting in Flow Properties when a matching Flow API Name record exists and is active. Defaults to false (optional). ref: ISP-6429</description>
    <defaultValue>false</defaultValue>
    <label>Required?</label>
    <type>Checkbox</type>
</CustomField>