projects/icd-lookup/force-app/main/default/objects/ICD_Lookup__mdt/fields/Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Tooltip__c</fullName>
    <label>Tooltip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>