projects/icd-lookup/force-app/main/default/objects/ICD_Lookup__mdt/listViews/Active_ICD_Lookup_List_View.listView-meta.xml
<ListView>
    <fullName>Active_ICD_Lookup_List_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Flow_API_Name__c</columns>
    <columns>Required__c</columns>
    <columns>Field_Placeholder__c</columns>
    <columns>Help_Text__c</columns>
    <columns>No_Matching_Codes_Found_Message__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active ICD Lookup List View</label>
    <language>en_US</language>
</ListView>